python/test-data/testWrongKeywordArg.py
def foo(kw: int) -> int:
    return kw

foo(x=4)
